# spectralis-sf2-importer

./: .gitignore  README.md  build.spec  entry.py  installer.iss  pyproject.toml  run.py
.github/workflows/: release.yml
sf2_converter/: __init__.py  __main__.py  app.py
sf2_converter/core/: converter.py  models.py  resampler.py  sf2_reader.py  sli_writer.py
sf2_converter/gui/: info_panel.py  main_window.py  sf2_tree_widget.py
sf2_converter/utils/: audio.py  naming.py
